<resources>
    <string name="app_name">ScreenCast</string>
    <string name="tutorial">Tutorial</string>
    <string name="privacy">Privacy policy</string>
    <string name="version">Version</string>
    <string name="setting">Setting</string>
    <string name="feedback">Feedback</string>
    <string name="contact">Contact Us</string>
    <string name="mirror">Mirroring</string>
    <string name="freecast">Screen Cast</string>
    <string name="filecastto">File Cast to</string>
    <string name="screencastto">Screen Cast to</string>

    <string name="folder_num">(%d)</string>
    <string name="loading">Loading...</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="audios">Audios</string>

    <string name="add_to_list">Add To Playlist</string>
    <string name="play_local">Play On Phone</string>
    <string name="play_remote">Screen to Tv</string>
    <string name="list_empty">play list is empty</string>
    <string name="pri">$%s</string>
    <string name="x1">%d/%d</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="system_mirror_desc1">Please Connect to Wifi</string>
    <string name="system_mirror_desc2">Activate miracast display on a TV or wireless display on your phone</string>
    <string name="system_mirror_desc3">Then select the TV you want to display</string>
    <string name="cast_describe_one">Searching device...</string>
    <string name="cast_describe_two">1 make sure your phone and cast device are connecting to the same Wi-Fi</string>
    <string name="cast_describe_three">2 VPN must be off on your phone</string>

    <string name="btn_connect">connect</string>
    <string name="btn_disconnect">disconnect</string>

    <string name="pay">Pro</string>
    <string name="language">Language</string>

    <!--1.1版本-->
    <string name="screen_fourk_cast">Screen Cast</string>
    <string name="screen_cast_normal">Ordinary screen cast</string>
    <string name="screen_cast_4k">screen cast</string>
    <!-- end 1.1版本-->
    <string name="common_permission_description">权限说明</string>
    <string name="common_permission_message">使用此功能需要先授予%s</string>
    <string name="common_permission_granted">授予</string>
    <string name="common_permission_denied">取消</string>

    <string name="common_permission_alert">Authorization reminder</string>
    <string name="common_permission_fail_hint">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_assign_hint">授权失败，请正确授予%s</string>
    <string name="common_permission_manual_fail_hint">获取权限失败，请手动授予权限</string>
    <string name="common_permission_manual_assign_fail_hint">Failed to obtain permission, please grant it manually%s</string>
    <string name="common_permission_background_location_fail_hint">获取后台定位权限失败，\n请您选择《始终允许》</string>
    <string name="common_permission_background_sensors_fail_hint">获取后台传感器权限失败，\n请您选择《始终允许》</string>
    <string name="common_permission_media_location_hint_fail">获取媒体位置权限失败\n请清除应用数据后重试</string>
    <string name="common_permission_goto_setting_page">Go to Authorization</string>

    <string name="common_permission_unknown">权限</string>
    <string name="common_permission_comma">、</string>

    <string name="common_permission_calendar">日历权限</string>
    <string name="common_permission_camera">相机权限</string>
    <string name="common_permission_contacts">通讯录权限</string>
    <string name="common_permission_location">定位权限</string>
    <string name="common_permission_location_background">后台定位权限</string>
    <string name="common_permission_nearby_devices">附近的设备权限</string>
    <string name="common_permission_microphone">Microphone permissions</string>
    <string name="common_permission_phone">电话权限</string>
    <string name="common_permission_call_logs">通话记录权限</string>
    <string name="common_permission_body_sensors">身体传感器权限</string>
    <string name="common_permission_body_sensors_background">后台身体传感器权限</string>
    <string name="common_permission_activity_recognition_api29">健身运动权限</string>
    <string name="common_permission_activity_recognition_api30">身体活动权限</string>
    <string name="common_permission_access_media_location">读取媒体文件位置权限</string>
    <string name="common_permission_sms">短信权限</string>
    <string name="common_permission_storage">Storage permissions</string>
    <string name="common_permission_post_notifications">发送通知权限</string>
    <string name="common_permission_image_and_video">照片和视频权限</string>
    <string name="common_permission_music_and_audio">音乐和音频权限</string>
    <string name="common_permission_get_installed_apps">读取应用列表权限</string>

    <string name="common_permission_all_file_access">所有文件访问权限</string>
    <string name="common_permission_install_unknown_apps">安装应用权限</string>
    <string name="common_permission_display_over_other_apps">悬浮窗权限</string>
    <string name="common_permission_modify_system_settings">修改系统设置权限</string>
    <string name="common_permission_allow_notifications">通知权限</string>
    <string name="common_permission_allow_notifications_access">通知栏监听权限</string>
    <string name="common_permission_apps_with_usage_access">查看使用情况权限</string>
    <string name="common_permission_alarms_reminders">查看闹钟提醒权限</string>
    <string name="common_permission_do_not_disturb_access">勿扰权限</string>
    <string name="common_permission_ignore_battery_optimize">忽略电池优化权限</string>
    <string name="common_permission_picture_in_picture">画中画权限</string>
    <string name="common_permission_vpn">\tVPN\t权限</string>

    <string name="com.crashlytics.android.build_id">1</string>

</resources>