<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@drawable/free_screen_bg">

    <RelativeLayout
        android:id="@+id/link_title_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff121212"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/link_back_rl"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="1dp">

            <ImageView
                android:id="@+id/link_back"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="8dp"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_back"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/link_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/filecastto"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            />

        <RelativeLayout
            android:id="@+id/link_help_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="1dp">

            <ImageView
                android:id="@+id/link_help_local"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_toLeftOf="@+id/link_status_local"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/question"
                />

            <ImageView
                android:id="@+id/link_status_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:paddingTop="3dp"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/cast_offline"
                />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/link_title_rl"
        android:layout_centerInParent="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="10dp">
        <multi.string.screencast.widgets.SearchRingView
            android:id="@+id/search_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/search_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/search"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/wifi_disconnect_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/link_title_rl"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/wifi_disconnect_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:padding="20dp"
            android:src="@drawable/wifi_unconnect"
            />

        <TextView
            android:id="@+id/wifi_disconnect_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/wifi_disconnect_img"
            android:layout_marginTop="12dp"
            android:text="@string/system_mirror_desc1"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            />
    </RelativeLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/wifi_name"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_below="@+id/search_rl"-->
    <!--        android:layout_marginTop="6dp"-->
    <!--        android:text=""-->
    <!--        android:textColor="#FFFFFF"-->
    <!--        android:textSize="15sp"-->
    <!--        android:visibility="visible"-->
    <!--        />-->

    <ListView
        android:id="@+id/deviceListView"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/search_rl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/reduis_4_bg"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp" />

    <RelativeLayout
        android:id="@+id/use_describe"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/search_rl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:visibility="invisible">
        <TextView
            android:id="@+id/use_describe1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/cast_describe_one"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/use_describe2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/use_describe1"
            android:layout_marginTop="10dp"
            android:text="@string/cast_describe_two"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/use_describe3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/use_describe2"
            android:layout_marginTop="3dp"
            android:text="@string/cast_describe_three"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            />

    </RelativeLayout>

    <!--加载中icon-->
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loadingId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:indicator="BallClipRotateMultiple"
        tools:ignore="MissingConstraints" />

</RelativeLayout>